# searchengine

./: .env.example  .gitignore  Caddyfile  README.md  SPEC.md  compose.dev.yaml  compose.yaml  config.yaml.example  example.env  flake.nix
backend/: Dockerfile  go.mod  go.sum  main.go  sort.go  sort_test.go
backend/config/: config.go
backend/database/: database.go
config/: config.yaml.example
config-prod/: Caddyfile  config.yaml.example
crawler/: Cargo.toml  Dockerfile
crawler/src/: config.rs  crawl_page.rs  crawled_page.rs  database.rs  http_request.rs  main.rs  page_content.rs  parser.rs  request_handler.rs  robots_txt.rs
crawler/src.bak/: crawled_page.rs  database.rs  main.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: API.tsx  App.css  App.tsx  Results.css  Results.tsx  index.css  main.tsx
frontend/src/components/: SearchBar.tsx  SearchFilters.tsx  SearchResults.tsx
frontend/src/models/: ScoredUrl.ts  SearchResults.ts
frontend/src/pages/: Index.tsx
indexer/: Cargo.toml  Dockerfile
indexer/src/: config.rs  crawled_page.rs  database.rs  dictionary.rs  indexed_page.rs  main.rs
indexer/src.bak/: database.rs  dictionary.rs  main.rs
new_frontend/: README.md
new_frontend/src/components/: SearchResults.tsx
new_frontend/src/pages/: Index.tsx
